--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -5,3 +5,12 @@
 @bodyFontFamily: @sansFontFamily;
 @bodyFontSize: 1em;
 @bodyLineHeight: 1.2em;
+@bodyTextColor: #111;
+@bodyBackgroundColor: #eaeaea;
+
+@buttonBackground: #888;
+
+@inputBorder: #aaa;
+@inputColor: #111;
+
+@headerBackgroundColor: #3E3E3E;
