--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -1,9 +1,8 @@
-@sciHeaderBorderColor: lighten(#121111, 7%);
-
 header.sci-header {
     .clearfix();
+    @sciHeaderBorderColor: lighten(@headerBackgroundColor, 7%);
 
-    background: #1E1E1E url(../images/dirty_header.png);
+    background: @headerBackgroundColor url(../images/dirty_header.png);
     border-bottom: solid 1px @sciHeaderBorderColor;
     .box-shadow(0 2px 2px @sciHeaderBorderColor);
 }
