--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -103,9 +103,10 @@ div.two-column {
             float: right;
 
             > li {
+                float: right;
                 list-style: none;
                 font-size: 60%;
-                line-height: 100%;
+                padding: 0 .3em;
 
                 > a {
                 }
