--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/html-head.vm
@@ -19,6 +19,7 @@
                 {jquery_exists:"$libRoot/jquery/jquery.exists.js"},
                 {undescore:"$libRoot/backbone/undescore-1.1.7.min.js"},
                 {backbone:"$libRoot/backbone/backbone-0.5.3.min.js"},
+                {bootstrap_tab:"$libRoot/bootstrap/bootstrap-tab.js"},
                 {ui:"$scriptsRoot/ui.js"}
         );
     </script>
