--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user-column.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user-column.vm
@@ -1,24 +1,15 @@
 #if($eVisitor.logged)
 <div id="userColumn">
-    <div class="user-title clearfix">
-        <img src="http://www.gravatar.com/avatar/$eVisitor.user.gravatar?s=48" width="48" height="48" title="" alt=""/>
-
-        <h2>$eVisitor.user.name</h2>
-
-        <div class="quick-menu">
-            <a href="$eCdn.contextPath/auth/logout" class="one-liner">#springMessage('Account.logOut')</a>
-            <a href="$eCdn.contextPath/settings" class="one-liner">#springMessage('Account.settings')</a>
-        </div>
-    </div>
+    #parse('user/_account-widget.vm')
     <hr/>
     <div class="widget">
         <div class="head">
             <ul class="quick-actions">
                 <li>
-                    <a href="$eCdn.contextPath/i/world">миры</a>
+                    <a href="$eCdn.contextPath/my/worlds">миры</a>
                 </li>
                 <li>
-                    <a href="$eCdn.contextPath/i/avatar">аватары</a>
+                    <a href="$eCdn.contextPath/my/avatars">аватары</a>
                 </li>
             </ul>
             <h3>Избранное</h3>
