--- a/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
@@ -13,3 +13,7 @@
 .tw-icon-32-catalog {
     background-position: 0 0;
 }
+
+.ani-bar-38x6 {
+    background: transparent url(../images/sprites/ani-bar-38x6.gif) no-repeat center center;
+}
