--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -6,7 +6,7 @@
 @import "forms.less";
 
 body {
-    background: @bodyBackgroundColor url(../images/dirty_body-light.png) repeat-x center top;
+    background: @bodyBackgroundColor;
     min-width: 640px;
 }
 
