--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -2,7 +2,7 @@ header.sci-header {
     .clearfix();
     @sciHeaderBorderColor: lighten(@headerBackgroundColor, 7%);
 
-    background: @headerBackgroundColor url(../images/dirty_header.png);
+    background: @headerBackgroundColor;
     border-bottom: solid 1px @sciHeaderBorderColor;
     .box-shadow(0 2px 2px @sciHeaderBorderColor);
 }
