--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -6,11 +6,12 @@
 @bodyFontSize: 1em;
 @bodyLineHeight: 1.2em;
 @bodyTextColor: #111;
-@bodyBackgroundColor: #eaeaea;
+@bodyBackgroundColor: #ffffff;
 
-@buttonBackground: #888;
+@buttonBackground: #333;
+@buttonText: #fffffa;
 
-@inputBorder: #aaa;
+@inputBorder: #888;
 @inputColor: #111;
 
-@headerBackgroundColor: #3E3E3E;
+@headerBackgroundColor: #d7e3f0;
