--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -1,7 +1,6 @@
 .btn-style(@color: @buttonBackground, @text: @buttonText) {
     #gradient > .vertical(lighten(@color, 10%),@color);
-    border: solid 1px lighten(@color, 20%);
-    .border-radius(3px);
+    border: none;
     .box-shadow(2px 2px 0 fade(lighten(@color, 70%), 50%));
     cursor: pointer;
     text-decoration: none;
@@ -20,7 +19,7 @@
     &.focus {
         outline: none;
         text-decoration: none;
-        background: @color;
+        background: lighten(@color, 5%);
         color: @text;
     }
 }
@@ -43,6 +42,8 @@
     background-image: url(../images/sprites/ani-bar-38x6.gif);
     background-repeat: no-repeat;
     background-position: center center;
+    color: transparent;
+
     &:focus,
     &:hover,
     &:active,
@@ -50,6 +51,7 @@
         background-image: url(../images/sprites/ani-bar-38x6.gif);
         background-repeat: no-repeat;
         background-position: center center;
+        color: transparent;
     }
 }
 
@@ -78,23 +80,23 @@ input[type=submit],
 button,
 a.btn {
     .btn-style();
-}
 
-input[type=submit].btn-small,
-button.btn-small,
-a.btn-small {
-    font-size: 80%;
-    line-height: 80%;
+    &.btn-green {
+        .btn-style(@buttonGreenBackground);
+    }
+
+    &.btn-small {
+        font-size: 80%;
+        line-height: 80%;
+    }
+
+    &.busy {
+        .btn-style-busy();
+    }
 }
 
 input:disabled, input.disabled,
 button:disabled, button.disabled,
 btn:disabled, btn.disabled {
     .btn-style-disabled();
-}
-
-input.busy,
-button.busy,
-btn.busy {
-    .btn-style-busy();
 }
