--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -11,6 +11,9 @@
 @buttonBackground: #333;
 @buttonText: #fffffa;
 
+@buttonGreenBackground: #008748;
+@buttonText: #fffffa;
+
 @inputBorder: #888;
 @inputColor: #111;
 
