--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/create-world.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/create-world.vm
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                     <div class="formRow">
-                        <input type="submit" value="#springMessage('form.create')"/>
+                        <input type="submit" class="btn btn-green" value="#springMessage('form.create')"/>
                     </div>
                 </form>
                 <script type="text/javascript">
