--- a/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/forms.less
@@ -63,10 +63,7 @@ form {
 
 input {
     padding: .2em;
-    border-top: solid 1px transparent;
-    border-left: solid 1px transparent;
-    border-bottom: solid 1px @inputBorder;
-    border-right: solid 1px @inputBorder;
+    border: solid 1px fade(@inputBorder, 40%);
     background: none;
     color: @inputColor;
 
