--- a/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/icons.less
@@ -16,4 +16,8 @@
 
 .ani-bar-38x6 {
     background: transparent url(../images/sprites/ani-bar-38x6.gif) no-repeat center center;
+
+    &.on-left {
+        background-position: left center;
+    }
 }
