--- a/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/variables.less
@@ -14,7 +14,7 @@
 @buttonGreenBackground: #008748;
 @buttonText: #fffffa;
 
-@inputBorder: #888;
+@inputBorder: #ccc;
 @inputColor: #111;
 
 @headerBackgroundColor: #d7e3f0;
