--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/index.vm
@@ -7,7 +7,7 @@
         #parse('shared/html-bars-brand.vm')
     </div>
 </header>
-<div id="bodyColumns">
+<div id="bodyColumns" class="layout-3-4-3">
     <div class="content">
         <div class="left">
             #parse('user-column.vm')
