--- a/src/waypalm-site/src/main/webapp/static/theme/less/reset.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/reset.less
@@ -1,12 +1,9 @@
-* {
-    padding: 0;
-    margin: 0;
-}
-
 body {
     font-family: @bodyFontFamily;
     font-size: @bodyFontSize;
     line-height: @bodyLineHeight;
+
+    margin: 0;
 }
 
 a, a:hover {
@@ -20,4 +17,13 @@ a, a:hover {
 
 .hidden {
     display: none;
+}
+
+.one-liner {
+    word-break: keep-all;
+    white-space: nowrap;
+}
+
+.w100p {
+    width: 100%;
 }
