--- a/src/waypalm-site/src/main/java/velocity_implicit.vm
+++ b/src/waypalm-site/src/main/java/velocity_implicit.vm
@@ -1,5 +1,7 @@
 #* @implicitly included *#
 #* @velocityproperties path="../resources/waypalm-site-velocity.properties" runtime_root="../webapp/WEB-INF/velocity" *#
+#* @vtlvariable name="escTool" type="org.apache.velocity.tools.generic.EscapeTool" *#
+#* @vtlvariable name="dateTool" type="org.apache.velocity.tools.generic.DateTool" *#
 #* @vtlvariable name="eCdn" type="waypalm.site.web.extensions.CdnExtension" *#
 #* @vtlvariable name="eVisitor" type="waypalm.site.web.extensions.VisitorExtension" *#
 #* @vtlvariable name="eViewMeta" type="waypalm.site.web.extensions.ViewMetaExtension" *#
