--- a/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/navigation.less
@@ -1,5 +1,8 @@
 header.sci-header {
     .clearfix();
+    background: #111 url(../images/dirty_body.png) repeat-x left top;
+    padding-top: .3em;
+    padding-bottom: .3em;
 }
 
 #logoBar {
@@ -9,11 +12,12 @@ header.sci-header {
     position: relative;
 
     #brandLogo {
+        font-family: @serifFontFamily;
         text-decoration: none;
-        display: block;
-        width: 100%;
-        height: 40px;
-        background: transparent url(../images/dirty_brand.png) no-repeat right center;
+        font-size: 1em;
+        line-height: 1.5em;
+        color: white;
+        font-weight: bold;
 
         &:focus {
             outline: none;
@@ -24,9 +28,14 @@ header.sci-header {
 #breadcrumbBar {
     float: left;
     position: relative;
+    margin-left: .3em;
+    color: white;
 
     > h1 {
-        line-height: 40px;
+        font-family: @serifFontFamily;
+        font-size: 1em;
+        font-weight: bold;
+        line-height: 1.5em;
         padding: 0;
         margin: 0;
     }
