--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user-column.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user-column.vm
@@ -1,3 +1,4 @@
+#* @vtlvariable name="favouriteWorlds" type="java.util.List<waypalm.domain.entity.World>" *#
 #if($eVisitor.logged)
 <div id="userColumn">
     #parse('user/_account-widget.vm')
@@ -13,6 +14,13 @@
                 </li>
             </ul>
             <h3>Избранное</h3>
+            <ul>
+                #foreach($world in $favouriteWorlds)
+                    <li>
+                        <a href="$cp/w/$world.slug">$escTool.html($world.title)</a>
+                    </li>
+                #end
+            </ul>
         </div>
     </div>
 </div>
